--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "daisyui": "^5.4.7",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.460.0",
-    "@emailjs/browser": "^4.4.1",
-    "next": "16.0.1",
+    "next": "^16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
